# mc

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
Engine/: Shader.cpp  Shader.h  main.cpp
Game/: Block.cpp  Block.h  Chunck.cpp  Chunck.h  Chunk.cpp  Chunk.h  Voxel.cpp  Voxel.h  World.cpp  World.h
Resources/Shaders/: Vertex.glsl  VertexTextures.glsl  fragment.glsl  fragmentTextures.glsl
docs/: etape4.md  etape5.md
src/: main.cpp  mainOld.cpp
src/Engine/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  WindowGLFW.cpp  WindowGLFW.h
src/Game/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  Game.cpp  Game.h  World.cpp  World.h  glTests.cpp  glTests.h
src/Game/Blocks/: Block.cpp  Block.h  BlockOld.cpp  BlockOld.h  Blocks.cpp  Blocks.h  Textures.cpp  Textures.h
src/GlTries/: RendererTests.cpp  RendererTests.h  TexturesAndTransformations.cpp  TexturesAndTransformations.h  glTests.cpp  glTests.h
src/tools/: Color.cpp  Color.h
